--- a/forum-custom.less
+++ b/forum-custom.less
@@ -3,10 +3,15 @@
 100%{opacity:100%}
 }
 
+@keyframes fixed{
+0%{position: fixed;max-height: 0;}
+5%{position: inherit;max-height:100%}
+}
+
 *{-webkit-tap-highlight-color:#00000000;
 transition: all 150ms;
 }
-body{letter-spacing: .3px;font-family: 'Google Sans','Noto Sans SC',sans-serif}
+body{font-family: 'Google Sans','Noto Sans SC',sans-serif}
 
 .username,
 .UserCard-profile,
@@ -17,14 +22,15 @@ span.TagLabel-text i{
  display:none
 }
 
-.Hero{ background:url(/assets/herobg.png);}
+.Hero{ text-align:left;background:url(/assets/herobg.png)}
 
 .Hero h2 {font-size: 27px; font-weight: 600}
 
 .DiscussionListItem{
    cursor: pointer;
    transition: all 0.4s ease;
-   margin:20px
+   margin:20px;
+   animation: fixed 2s
 }
 
 .TagTile,.DiscussionListItem,.Slidable-underneath,.DiscussionListItem-content
@@ -34,11 +40,6 @@ border-radius:10px!important;
 
 .Notification,.Avatar{
 border-radius:5px
-}
-
-.Dropdown-menu{
-border-top-left-radius:10px!important;
-border-top-right-radius:10px!important
 }
 
 .PostMention-preview{
@@ -93,6 +94,10 @@ margin:.5px
 @media (min-width: 767px){
 .PostUser-avatar{vertical-align:middle;position:relative;left:-7px;top:-2px;width:2.2em;height:2.2em;font-size:1em;line-height:2.2em}
 
+.Dropdown-menu{
+border-radius:5px!important;
+}
+
 .PostUser-badges{float:left;position:relative;margin-left:10px;margin-right:15px;width:auto;max-width:60px;top: 6px}
 
 .App-header{
@@ -106,6 +111,11 @@ animation: cafadein .3s;
 background: rgba(20,25,31,0.7)
 }
 
+.Dropdown-menu{
+border-top-left-radius:5px!important;
+border-top-right-radius:5px!important
+}
+
 .DiscussionListItem-content:active{
 background:#00000000
 }
@@ -115,8 +125,8 @@ background:#00000000
 }
 
 .Composer{
-border-bottom-left-radius:10px!important;
-border-bottom-right-radius:10px!important
+border-bottom-left-radius:5px!important;
+border-bottom-right-radius:5px!important
 }
 
 .drawer-backdrop{
@@ -184,9 +194,11 @@ body when (@config-dark-mode = true) {
 border: 1px solid #1b2028!important;
 color: #ccc
 }
+
 .avatar{
-opacity: 90%
+opacity: 90%!important
 }
+
 .PostStream-timeGap{
 border-bottom: 1px solid #1b2028!important;
 }
